# new-year-project

./: .gitignore  backend.docker-compose.yml  docker-compose.yml
backend/: Dockerfile  dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  pagination.py
backend/app/authentication/: auth.py  schemas.py
backend/app/cards/: exceptions.py  routes.py  schemas.py  templates_routes.py  utils.py
backend/app/core/: auth.py  exceptions.py  security.py
backend/app/database/: crud.py  models.py  schemas.py  session.py
backend/app/images/: exceptions.py  routes.py  utils.py
backend/app/users/: exceptions.py  routes.py  schemas.py  utils.py
client/: mockServiceWorker.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: index.tsx
client/src/app/: index.tsx
client/src/mocks/: data.ts  handlers.ts
client/src/util/: web-vitals.ts
frontend/: .eslintrc.cjs  App.tsx  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.tsx  auth.tsx  index.tsx  main.tsx  routeTree.gen.ts  types.d.ts  vite-env.d.ts
frontend/src/actions/: axiosApi.ts  getTemplate.ts
frontend/src/api/: api-client.ts  authentication.ts  cards.ts  cardsTemplates.ts  user.ts
frontend/src/hooks/: useCards.ts  useCardsTemplates.ts  useCreateCard.ts  useCreateTemplates.ts  useRegister.ts  useUser.ts
frontend/src/lang/: index.ts
frontend/src/mocks/: data.ts
frontend/src/pages/: App.tsx  Card.tsx  CardCreate.tsx  Cards.tsx  CreateCard.tsx  CreateTemplate.tsx  Error.tsx  Index.tsx  Login.tsx  Main.tsx  Register.tsx  (+3 more)
(+50 files in other folders)
