[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "fastapi==0.104.1",
    "greenlet==3.0.1",
    "h11==0.14.0",
    "idna==3.4",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic-core==2.14.5",
    "pydantic==2.5.2",
    "pyjwt==2.8.0",
    "python-multipart==0.0.6",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.23",
    "starlette==0.27.0",
    "typing-extensions==4.8.0",
    "uvicorn==0.24.0.post1",
]
